--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <version>1.0.16</version>
         </dependency>
 
+        <!-- 工具 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>4.4.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
