--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,5 @@ redis.test.borrow=true
 #\u628A\u8FDE\u63A5\u653E\u56DEjedis\u8FDE\u63A5\u6C60\u65F6\uFF0C\u6821\u9A8C\u5E76\u8FD4\u56DE\u53EF\u7528\u7684\u8FDE\u63A5
 redis.test.return=false
 #redis config end
+
+spring.rabbitmq.host=192.168.121.132
